# hudOS

./: .bazelrc  .gitignore  BUILD.bazel  README.md  TODO.md  WORKSPACE  bootstrap_hudctl.sh  bootstrap_hudctl_deployer.sh  build.sh  buildroot_config  buildroot_setup.sh  bundle_deployer.sh  deploy.sh  deps.bzl  go.mod  go.sum  hb  logging.sh  provision.sh  update_vendor.sh  vendor.json
app_builder/: app_builder.sh
app_builder/steps/: build_go.sh  build_meson.sh  build_zig.sh  bundle_app.sh  copy.sh  generate_install.sh  generate_service.sh  generate_wayland_headers.sh  link.sh  link_vendor.sh  meson_cross.ini
app_rules/: app.bzl  go.sh  raw.sh  zig.sh
app_rules/go/: BUILD.bazel  go.bzl  post_deploy.sh  template.service
apps/auto-dim/: .hud_app.json  brightness.go  hardware.go  main.go
apps/bluetooth/: .hud_app.json  BUILD.bazel  main.go
apps/clock/: .hud_app.json  build.zig  main.go
apps/device-info/: .hud_app.json  README.md  main.go  network.go
apps/gRPCurl/: .hud_app.json
apps/hudctl/: .hud_app.json  README.md  hudctl  hudctl-appenv  hudctl-catalog  hudctl-deploy  hudctl-disable  hudctl-enable  hudctl-env  hudctl-install  hudctl-link  hudctl-manifest  hudctl-root  hudctl-root-info  hudctl-root-toggle  hudctl-root-upgrade  hudctl-start  hudctl-status  hudctl-stop  hudctl-window  hudctl-window-add  hudctl-window-list  hudctl-window-remove  hudctl-window-render  json.sh  logging.sh
apps/japokwm/: .hud_app.json  hud-apps.target  init.lua  japokwm.service
apps/kiwmi/: .hud_app.json  hud-apps.target  hud-glasses.target  hud.slice  init.lua  kiwmi.service  restart-kiwmi.service  windows.lua
apps/sdktest/: .hud_app.json  main.go
apps/timers/: .hud_app.json
apps/uitest/: .hud_app.json  BUILD.bazel  main.go
apps/voice-activation/: .hud_app.json  main.go
apps/weston/: .hud_app.json  001-weston.sh  BUILD.bazel  hud-apps.target  hud.target  weston-debug.service  weston-session.target  weston.ini  weston.service  weston.socket
buildroot/: .config  .gitignore  Config.in  boot.txt  build.sh  external.desc  external.mk  image.sh  save_config.sh  setup.sh  ssh_deploy.sh  upgrade.sh
buildroot/br2_hudos/: Config.in
buildroot/configs/: hudos_defconfig
chroot/: .gitignore  destroy.sh  down.sh  enter.sh  is-up.sh  setup.sh  up.sh
go-sdk/: README.md
go-sdk/components/: clock.go  (+1 more)
hud_builder/: hb-build  hb-buildroot  hb-buildroot-build  hb-buildroot-configure  hb-buildroot-deploy  hb-buildroot-reset  hb-buildroot-save  hb-buildroot-updatekey  hb-deploy  hb-devices  hb-devices-brhook  hb-devices-default  hb-devices-host  hb-devices-list  hb-devices-new  hb-devices-ssh  hb-help  hb-proto  hb-vendor
images/: download.sh
provision/: create_hud_user.sh  install_ssh_key.sh  install_weston.sh  update.sh
(+116 files in other folders)
