load("@bazel_gazelle//:def.bzl", "gazelle")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

# gazelle:prefix github.com/edison-moreland/nreal_hud
gazelle(name = "gazelle")

pkg_tar(
    name = "app_bundle",
    srcs = [
        #        "//apps/uitest:hudapp",
        "//apps/weston:hudapp",
        "//apps/bluetooth:hudapp",
    ],
)
