load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//app_rules/go:go.bzl", "hudapp_go")

go_library(
    name = "uitest_lib",
    srcs = ["main.go"],
    importpath = "github.com/edison-moreland/nreal_hud/apps/uitest",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_neurlang_wayland//cairoshim",
        "@com_github_neurlang_wayland//window",
        "@com_github_neurlang_wayland//wl",
        "@com_github_neurlang_wayland//xkbcommon",
    ],
)

hudapp_go(
    app = "uitest",
    embed = [":uitest_lib"],
)

go_binary(
    name = "uitest",
    embed = [":uitest_lib"],
    visibility = ["//visibility:public"],
)
