load("//app_rules:app.bzl", "hudapp")

exports_files([
    "weston.service",
    "hud.target",
    "hud-apps.target",
    "001-weston.sh",
    "weston.ini",
])

hudapp(
    app = "weston",
    binaries = [],
    configs = [
        ":weston.ini",
    ],
    post_deploy = [
        ":001-weston.sh",
    ],
    systemd_units = [
        ":weston.service",
        ":hud.target",
        ":hud-apps.target",
    ],
)
